# glowrs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.cuda  README.md  TODO
.github/workflows/: build-register-image.yml  publish.yml  rust.yml
crates/glowrs/: Cargo.toml  README.md
crates/glowrs-server/: Cargo.toml  README.md
crates/glowrs-server/src/: main.rs
crates/glowrs-server/src/server/: data_models.rs  init.rs  mod.rs  state.rs  utils.rs
crates/glowrs-server/src/server/infer/: batch.rs  client.rs  embed.rs  executor.rs  handler.rs  mod.rs
crates/glowrs-server/src/server/routes/: default.rs  embeddings.rs  models.rs
crates/glowrs/examples/: simple.rs
crates/glowrs/src/: error.rs  exports.rs  lib.rs  pooling.rs
crates/glowrs/src/config/: mod.rs  model.rs  parse.rs
crates/glowrs/src/core/: embedder.rs  mod.rs  repo.rs  sentence_transformer.rs  utils.rs
crates/glowrs/src/core/config/: mod.rs  model.rs  parse.rs
crates/glowrs/src/model/: device.rs  embedder.rs  mod.rs  pooling.rs  sentence_transformer.rs  utils.rs
crates/glowrs/tests/: test_embeddings.rs
crates/glowrs/tests/fixtures/all-MiniLM-L6-v2/: config.json
crates/glowrs/tests/fixtures/embeddings/: examples.json
crates/glowrs/tests/fixtures/jina-embeddings-v2-base-en/: config.json
crates/glowrs/tests/fixtures/multi-qa-distilbert-dot-v1/: config.json
scripts/: build-publish-cuda-image.sh
src/: lib.rs  main.rs  routes.rs  utils.rs
src/embedding/: embedder.rs  mod.rs  models.rs  sbert.rs  sentence_transformer.rs
src/infer/: batch.rs  client.rs  embed.rs  handler.rs  infer.rs  mod.rs  queue.rs
src/model/: embedder.rs  mod.rs  sentence_transformer.rs  utils.rs
src/proc/: mod.rs  queue.rs  task.rs  worker.rs
src/server/: config.rs  data_models.rs  init.rs  mod.rs  router.rs  state.rs  utils.rs
src/server/infer/: batch.rs  client.rs  embed.rs  handler.rs  mod.rs
src/server/routes/: embeddings.rs  mod.rs  text_embeddings.rs
src/work/: mod.rs  queue.rs  task.rs  worker.rs
tests/: generate-fixtures.py  main_test.rs  test_async_openai_client.py  test_async_openai_client_cpu.py  test_embedder.rs  test_openai_client.py  test_queue.rs
