[workspace]
members = [
	"crates/glowrs",
	"crates/glowrs-server"
]
resolver = "2"
exclude = ["tests", "scripts"]

[workspace.dependencies]
candle-core = { version = "0.4.1" }
candle-nn = { version = "0.4.1"}
candle-transformers = { version = "0.4.1" }

# Enable high optimizations for candle in dev builds
[profile.dev.package]
candle-core = { opt-level = 3 }
candle-nn = { opt-level = 3 }
candle-transformers = { opt-level = 3 }


[workspace.package]
license = "Apache-2.0"
version = "0.4.0"

