[workspace]
members = [
	"crates/glowrs",
	"crates/glowrs-server"
]
resolver = "2"
exclude = ["tests", "scripts"]

[workspace.dependencies]
candle-core = { version = "0.6.0" }
candle-nn = { version = "0.6.0" }
candle-transformers = { version = "0.6.0" }
tokenizers = { version = "0.20.0" }
clap = { version = "4.5.17"}

# Enable high optimizations for candle in dev builds
[profile.dev.package]
candle-core = { opt-level = 3 }
candle-nn = { opt-level = 3 }
candle-transformers = { opt-level = 3 }

[workspace.package]
license = "Apache-2.0"
version = "0.5.0"

